# difec-ron

./: .gitignore  CMakeLists.txt  README.md  nodelets.xml  package.xml
config/: FormationControlParams.cfg  detection_params.yaml  formation.csv  formation_control.yaml  formation_rw.csv  swarm_control.yaml  tf_connector.yaml  tf_connector_rw.yaml
config/rviz/: vis.rviz
include/: main.h
launch/: detect.launch  formation_control.launch  formation_control_indoor.launch  formation_error_calculator.launch  multireconfigure.launch  multireconfigure_rw.launch  rviz.launch  rw_three_sided.launch  sim_three_sided.launch  swarm_control.launch  swarm_control_indoor.launch  tf_connector.launch  tf_connector_rw.launch
msg/: FormationState.msg
rviz/: uav1.rviz
scripts/: rosbag_record.sh
src/: formation_control.cpp  formation_error_calculator.cpp  pcl_detect_nodelet.cpp  swarm_control.cpp
tmux_scripts/: .tmuxinator.yml  three_drones.yml  two_drones.sh  two_drones.yml
tmux_scripts/custom_configs/: constraint_manager.yaml  formation_a.csv  formation_b.csv  mpc_tracker.yaml  nimbro.yaml  uav_names.yaml
tmux_scripts/three_drone_experiment/: difec_ron.sh  ground_station.sh  ground_station.yml  multireconfigure.sh  nimbro.sh
tmux_scripts/three_drone_experiment/custom_configs/: constraint_manager.yaml  formation_a.csv  formation_a_large.csv  formation_b.csv  formation_c.csv  formation_c_large.csv  formation_d.csv  formation_e.csv  mpc_tracker.yaml  nimbro.yaml  three_drone_formation.csv  uav_manager.yaml  uav_names.yaml
tmux_scripts/two_drone_rw_experiment/: difec_ron.sh
tmux_scripts/two_drone_rw_experiment/custom_configs/: constraint_manager.yaml
