<?xml version="1.0"?>
<package format="2">
  <name>difec_ron</name>
  <version>1.0.0</version>
  <description>Implementation of the paper "Distributed formation-enforcing control for UAVs robust to observation"</description>

  <author email="vrbamato@fel.cvut.cz">Matouš Vrba</author>
  <maintainer email="vrbamato@fel.cvut.cz">Matouš Vrba</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>libopencv-dev</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>message_runtime</depend>
  <depend>nodelet</depend>
  <depend>visualization_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
    generate_messages_cpp
  </export>

</package>
